--- a/style.css
+++ b/style.css
@@ -13,7 +13,10 @@ a {
 body {
     font-family: "Carrois Gothic", serif;
 
+
 }
+
+
 
 ul {
     list-style-type: none;
@@ -38,11 +41,12 @@ header {
     z-index: 5;
     width: 100%;
     top: 0;
+    
 
 
 }
 
-header .nav_l li a:hover {
+header .nav_list li a:hover {
     border-bottom: 3px solid black;
     transition: all .5s ease-in-out;
 
@@ -63,7 +67,7 @@ header .rel {
     font-size: 40px;
     font-weight: 600;
     text-transform: capitalize;
-    
+    color: white;
     cursor: pointer;
 
 }
@@ -72,29 +76,33 @@ header .rel {
 
 nav {
     gap: 10px;
+
 }
 
-.nav_l {
+.nav_list {
     gap: 50px;
 
 }
 
-.nav_l a {
+.nav_list a {
     text-transform: capitalize;
     display: block;
-    color: black;
+    color: white;
     font-weight: 400px;
+    font-size: 24px;
 }
 
 nav,
-.nav_l {
+.nav_list {
     display: flex;
 
 }
 
 .hero {
-    background: rgb(44,117,217);
-background: linear-gradient(140deg, rgba(44,117,217,1) 0%, rgba(42,106,198,1) 16%, rgba(40,99,185,1) 27%, rgba(38,92,173,1) 37%, rgba(36,82,157,1) 51%, rgba(33,66,129,1) 75%, rgba(29,49,99,1) 100%);
+
+    overflow-x: hidden;
+    background: rgb(44, 117, 217);
+    background: linear-gradient(140deg, rgba(44, 117, 217, 1) 0%, rgba(42, 106, 198, 1) 16%, rgba(40, 99, 185, 1) 27%, rgba(38, 92, 173, 1) 37%, rgba(36, 82, 157, 1) 51%, rgba(33, 66, 129, 1) 75%, rgba(29, 49, 99, 1) 100%);
 }
 
 .hero .rel {
@@ -121,23 +129,24 @@ background: linear-gradient(140deg, rgba(44,117,217,1) 0%, rgba(42,106,198,1) 16
     font-weight: 900;
     letter-spacing: -1px;
     text-transform: uppercase;
+    color: white;
 }
+
 .rel h2::before {
     content: "";
     display: block;
     position: absolute;
     width: 150px;
     height: 150px;
-    background-color: white;
-    border-radius: 100%;
-    left: -100px;
+    background-image: url(../img/stripe_c01.png);
+    left: -80px;
     top: -100px;
     z-index: -1;
 
 }
+
 .hero_btn:hover {
     background-color: black;
-    color: white;
     transform: translate(0);
     transition: all .3s ease-in-out;
 
@@ -147,25 +156,33 @@ background: linear-gradient(140deg, rgba(44,117,217,1) 0%, rgba(42,106,198,1) 16
 .hero_btn {
     margin-top: 35px;
     display: inline-block;
-    border: 1px solid black;
+    border: 1px solid white;
     padding: 10px 20px;
     border-radius: 60px;
-    color: black;
     transition: all .3s ease-in-out;
+    
+}
+.hero .tit_wrap p{
+    color: white;
+}
+
+.hero .rel .tit_wrap a{
+    color: white;
 }
 
 .nav_btn {
+    margin-left:150px;
     position: relative;
     display: block;
     width: 35px;
     height: 23px;
-    box-shadow: 0 0 10px rgb(128, 128, 128);
+   
 }
 
 .nav_btn span {
     display: block;
     width: 100%;
-    background-color: black;
+    background-color: white;
     font-size: 0;
     height: 3px;
     position: absolute;
@@ -188,14 +205,16 @@ background: linear-gradient(140deg, rgba(44,117,217,1) 0%, rgba(42,106,198,1) 16
     position: relative;
     transform: translateX(90px);
 }
+
 .rel .img_wrap::before {
     content: "";
     display: block;
     position: absolute;
     width: 450px;
     height: 450px;
-    background-color: white;
-    border-radius: 100%;
+    background-image: url(../img/stripe.png);
+    background-repeat:repeat;
+    border-radius: 50%;
     right: -300px;
     top: -300px;
     z-index: -1;
@@ -243,7 +262,7 @@ background: linear-gradient(140deg, rgba(44,117,217,1) 0%, rgba(42,106,198,1) 16
     justify-content: flex-end;
     color: white;
     padding: 0 43px 62px 26px;
-    border-radius: 30px;
+    border-radius: 20px;
 
     transition: all .5s ease-in-out;
 }
@@ -289,41 +308,3 @@ background: linear-gradient(140deg, rgba(44,117,217,1) 0%, rgba(42,106,198,1) 16
     margin: 7px 0 14px;
 }
 
-.card .arr_wrap {
-    text-align: right;
-}
-
-.card_arr {
-    position: absolute;
-    display: block;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    font-size: 0;
-    box-shadow: 0 0 4px gba(0, 0, 0, 0.25);
-    top: calc(50% - 20px);
-
-}
-
-
-.card_arr.left:hover,
-.card_arr.right:hover {
-    box-shadow: 5px 5px 1px black;
-
-
-}
-
-.card_arr.left {
-    left: -60px;
-    background: url(../img/card-arr-prev.png) no-repeat center/18px #ffff;
-    transition: all .5s ease-in-out;
-}
-
-
-
-
-.card_arr.right {
-    right: -60px;
-    background: url(../img/card-arr-next.png) no-repeat center/18px #ffff;
-    transition: all .5s ease-in-out;
-}
